Harden testing and CI with conformance, differential checks, and coverage gates

--- a/arbor/Cargo.toml
+++ b/arbor/Cargo.toml
@@ -10,4 +10,4 @@ arbor-core = { path = "../arbor-core" }
 tokio = { version = "1.48", features = ["time"] }
 
 [dev-dependencies]
-tokio = { version = "1.48", features = ["macros", "rt", "time"] }
+tokio = { version = "1.48", features = ["macros", "rt", "time", "test-util", "sync"] }
